--- a/Engineering/2.2Webpack打包.md
+++ b/Engineering/2.2Webpack打包.md
@@ -269,7 +269,7 @@ module.exports = {
 }
 ```
 
-## webpack 核心原理
+## * webpack 核心原理
 
 webpack 会找到其中文件作为打包入口
 
@@ -278,12 +278,26 @@ webpack 会找到其中文件作为打包入口
 
 ![webpack核心原理](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/webpack%E6%A0%B8%E5%BF%83%E5%8E%9F%E7%90%86.png)
 
+Loader 与 Plugin
+
+- Loader：用于资源加载并处理各种语言的转换/编译（例如：将不同语言转换为 JavaScript）
+- Plugin：用于资源加载以外的其他打包/压缩/文件处理等功能
+
 ### Loader 工作原理
 
 Loader 负责资源文件从输入到输出的转换，Loader 实际上是一种管道的概念，对于同一个资源可以依次使用多个 Loader
 
 - loader 配置文件中配置加载器（加载器 use 不仅可以用名字也可以用路径）
-- 注意：loader 管道最终需要返回 JavaScript 代码
+
+  注意：loader 管道最终需要返回 JavaScript 代码
+
+- loader 输入：`function` 接收一个参数作为输入，该参数为文件内容
+
+  loader 输出：`return` 一个返回值作为输出，该返回值为模块导出的字符串；loader 需要将返回值作为一个模块导出，才能更好的在 webpack 打包文件中使用，有三种导出方式：
+
+  - 按照 ES Modules 方式导出
+  - 按照 CommonJS 方式导出
+  - loader 处理类似于管道，可以串联多个 loader，可以直接将返回值交给下一个 loader 继续处理
 
 ![loader文件转换流程](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/loader%E6%96%87%E4%BB%B6%E8%BD%AC%E6%8D%A2%E6%B5%81%E7%A8%8B.png)
 
@@ -336,9 +350,7 @@ module.exports = {
 }
 ```
 
-### Plugin 插件机制
-
-- 增强 webpack 自动化能力
+### Plugin 插件使用
 
 Loader 专注实现资源模块加载，从而实现整体项目的打包，Plugin 为了解决除了资源加载的一些自动化工作，例如：清除 dist 目录、拷贝静态文件至输出目录、压缩输出代码
 
@@ -462,29 +474,30 @@ module.exports = {
 }
 ```
 
-### 开发一个插件
+### Plugin 工作原理
 
-> [Compiler Hooks](https://webpack.js.org/api/compiler-hooks/)
->
 > [webpack4 Compiler Hooks ](https://v4.webpack.js.org/api/compilation-hooks/)
 >
 > [compiler 钩子](https://www.webpackjs.com/api/compiler-hooks/)
 
 相比于 Loader，Plugin 拥有更宽的能力范围
 
-- Plugin 通过钩子机制实现
+- Plugin 通过钩子机制实现，通过在生命周期的钩子中挂载函数实现扩展
 
   钩子机制，类似于 web 的事件，为了便于插件扩展，webpack 在每个环节都设置了钩子
 
 ![webpack钩子机制](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/webpack%E9%92%A9%E5%AD%90%E6%9C%BA%E5%88%B6.png)
 
-webpack 要求插件必须是一个函数或者是一个包含 `apply` 方法的对象，一般会把插件定义成一个类，在类上定义一个 `apply` 方法
+webpack 要求 Plugin 必须是一个函数或者是一个包含 `apply` 方法的对象（一般会把插件定义成一个类，在类上定义一个 `apply` 方法）
 
-- 里面有 `emit` 的钩子，在生成资源到 `output` 目录之前执行
+- `apply` 方法有一个参数 `compiler`，通过 `compiler` 可以给 webpack 编译打包过程中添加钩子
 
-通过在生命周期的钩子中挂载函数实现扩展
+  里面有 `emit` 的钩子，它的执行时机：生成资源 `asset` 到 `output` 目录之前执行
+
+- 通过钩子的回调函数 `callback` 拿到打包结果对象 `compilation`（通过 `compilation.assets` 获取生成资源文件信息），然后对打包结果对象 `compilation` 进行修改
 
 ```js
+// comment-plugin.js
 class MyPlugin {
   // 在 webpack 启动时自动调用
   apply(compiler) {
@@ -498,6 +511,7 @@ class MyPlugin {
         if (name.endsWith('.js')) {
           const contents = compilation.assets[name].source()
           const withoutComments = contents.replace(/\/\*\*+\*\//g, '')
+          // 覆盖原有内容
           compilation.assets[name] = {
             source: () => withoutComments,
             size: () => withoutComments.length
@@ -508,6 +522,8 @@ class MyPlugin {
   }
 }
 
+// webpack.config.js
+const MyPlugin = require('./comment-plugin.js')
 module.exports = {
   plugins: [new MyPlugin()]
 }
