--- a/Engineering/2.5webpack源码.md
+++ b/Engineering/2.5webpack源码.md
@@ -306,15 +306,26 @@ if (mode & 8) {
    - 如果返回的是对象，则需要遍历
 
 ```js
+// 11 定义 t 方法，用于加载指定 value 的模块内容，之后对内容进行处理再返回
 __webpack_require__.t = function (value, mode) {
-  if (mode & 1) value = __webpack_require__(value)
-  if (mode & 8) return value
-  if (mode & 4 && typeof value === 'object' && value && value.__esModule) return value
-  var ns = Object.create(null)
+  // 加载 value 对应的模块内容（value 一般就是模块 id）
+  // 加载之后的内容又重新赋值给 value 变量
+  if (mode & 1) {
+    value = __webpack_require__(value)
+  }
+  if (mode & 8) {
+    // 加载了可以直接返回使用的内容
+    return value
+  }
+  if (mode & 4 && typeof value === 'object' && value && value.__esModule) {
+    return value
+  }
+  // 如果 8 和 4 都没有成立则需要自定义 ns 来通过 default 属性返回内容
+  let ns = Object.create(null)
   __webpack_require__.r(ns)
   Object.defineProperty(ns, 'default', { enumerable: true, value: value })
-  if (mode & 2 && typeof value != 'string')
-    for (var key in value)
+  if (mode & 2 && typeof value !== 'string') {
+    for (var key in value) {
       __webpack_require__.d(
         ns,
         key,
@@ -322,7 +333,150 @@ __webpack_require__.t = function (value, mode) {
           return value[key]
         }.bind(null, key)
       )
+    }
+  }
   return ns
+}
+```
+
+增加测试案例
+
+```js
+{
+  './src/index.js': function (module, exports, __webpack_require__) {
+    let name = __webpack_require__.t(/*! ./login.js */ './src/login.js', 0b0111)
+    console.log(name)
+  },
+  './src/login.js': function (module, exports) {
+    module.exports = 'zce'
+  }
+}
+```
+
+### 懒加载源码分析
+
+`installedChunks` 
+
+- 如果是 `0` 代表以及加载过
+- 如果是 `promise` 代表当前 chunk 正在加载
+- 如果是 `undefined` 代表当前 chunk 没有被加载
+- 如果是 `null` 代表当前 chunk 预加载（preloaded/prefetched）
+
+第一次进入，`installedChunks` 的值为 `undefined` 会进入判断，之后判断是否存在，因为有些时候可能是一个 `promise`，需要对其进行保存，如果不进行保存，`Promise.all([])` 会直接被调用，结果显然不合理
+
+![wpSourceCode8](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/wpSourceCode8.png)
+
+经过一系列操作把创建的 `script` 标签放到 head 里，最终执行 `Promise.all(promises)`
+
+![wpSourceCode9](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/wpSourceCode9.png)
+
+之后会执行 `window["webpackJsonp"]` ，传入的值是一个二维数组
+
+- 第一个值是一个数组（需要懒加载的 ids）
+- 第二个值是一个对象（模块定义）
+
+```js
+(window["webpackJsonp"] = window["webpackJsonp"] || []).push([["login"], {
+  "./src/login.js":
+    (function (module, exports) {
+      module.exports = "懒加载导出内容"
+    })
+}]);
+```
+
+加载完成之后会把 `installedChunks` 改为 `0`，最终执行 `resolve`
+
+![wpSourceCode10](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/wpSourceCode10.png)
+
+自此方法 `e` 就走完了，接下来会走方法 `t`，传入 `'./src/login.js', 7`
+
+- `7 & 1` 为 true，会把当前模块进行加载并把值赋值给 value 上
+- `7 & 4` 为 true，但是这里 value 为 `string` 类型，会创建一个空对象，并把 value 挂载上去，并返回 `ns`
+
+![wpSourceCode11](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/wpSourceCode11.png)
+
+最终即可拿到懒加载模块的内容
+
+![wpSourceCode12](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/wpSourceCode12.png)
+
+### 手写单文件懒加载
+
+```js
+(function (modules) {
+  // 15 定义 webpackJsonpCallback 实现：合并模块定义，改变 promise 状态执行后续行为
+  function webpackJsonpCallback(data) {
+    // 01 获取需要被动态加载的模块 id
+    let chunkIds = data[0]
+    // 02 获取需要被动态加载的模块依赖关系对象
+    let moreModules = data[1]
+    let chunkId,
+      resolves = []
+    // 03 循环判断 chunkIds 里对应的模块内容是否已经完成了加载
+    for (let i = 0; i < chunkIds.length; i++) {
+      chunkIds = chunkIds[i]
+      if (
+        Object.prototype.hasOwnProperty.call(installedChunks, chunkId) &&
+        installedChunks[chunkId]
+      ) {
+        // 把 resolve 放进去
+        resolves.push(installedChunks[chunkId][0])
+      }
+      // 更新当前的 chunk 状态
+      installedChunks[chunkId] = 0
+    }
+    for (moduleId in moreModules) {
+      if (Object.prototype.hasOwnProperty.call(moreModules, moduleId)) {
+        modules[moduleId] = moreModules[moduleId]
+      }
+    }
+    while (resolves.length) {
+      resolves.shift()()
+    }
+  }
+
+  // 16 定义 installedChunks 用于标识某个 chunkId 对应的 chunk 是否完成加载
+  let installedChunks = {
+    main: 0
+  }
+
+  // 18 定义 jsonpScriptSrc 实现 src 处理
+  function jsonpScriptSrc(chunkId) {
+    return __webpack_require__.p + '' + chunkId + '.built.js'
+  }
+
+  // 17 定义 e 方法用于实现 jsonp 加载内容，利用 promise 实现异步加载
+  __webpack_require__.e = function (chunkId) {
+    // 01 定义一个数组用于存放 promise
+    let promises = []
+    // 02 获取 chunkId 对应的 chunk 是否已经完成了加载
+    let installedChunkData = installedChunks[chunkId]
+    // 03 依据当前是否已完成加载状态来执行后续逻辑
+    if (installedChunkData !== 0) {
+      if (installedChunkData) {
+        promises.push(installedChunkData[2])
+      } else {
+        let promise = new Promise((resolve, reject) => {
+          installedChunkData = installedChunks[chunkId] = [resolve, reject]
+        })
+        promises.push((installedChunkData[2] = promise))
+        // 创建标签
+        let script = document.createElement('script')
+        // 设置 src
+        script.src = jsonpScriptSrc(chunkId)
+        // 写入 script 标签
+        document.head.appendChild(script)
+      }
+    }
+    // 04 执行 promise
+    return Promise.all(promises)
+  }
+
+  // 12 定义变量存放数组
+  let jsonpArray = (window['webpackJsonp'] = window['webpackJsonp'] || [])
+  // 13 保存原生的 push 方法
+  let oldJsonpFunction = jsonpArray.push.bind(jsonpArray)
+  // 14 重写原生的 push 方法
+  jsonpArray.push = webpackJsonpCallback
 }
 ```
 
