完成webpack打包源码

--- a/Engineering/2.5webpack源码.md
+++ b/Engineering/2.5webpack源码.md
@@ -480,3 +480,17 @@ __webpack_require__.t = function (value, mode) {
 }
 ```
 
+## webpack 编译流程
+
+**编译流程**
+
+- 配置初始化
+- 内容编译
+- 输出编译后的内容
+
+这三个过程整体执行过程就可以看成 **事件驱动型事件流工作机制**，这个机制可以将不同插件串联起来最后完成所有的工作，最核心部分如下：
+
+- 负责编译的 `complier`
+- 负责创建 `bundles` 的 `compilation`
+
+tapable 本身是一个独立的库
