--- a/Engineering/2.5webpack源码.md
+++ b/Engineering/2.5webpack源码.md
@@ -482,6 +482,8 @@ __webpack_require__.t = function (value, mode) {
 
 ## webpack 编译流程
 
+### tapable
+
 **编译流程**
 
 - 配置初始化
@@ -493,4 +495,121 @@ __webpack_require__.t = function (value, mode) {
 - 负责编译的 `complier`
 - 负责创建 `bundles` 的 `compilation`
 
-tapable 本身是一个独立的库
+> tapable 本身是一个独立的库，内部提供不同的类可以实例化不同的 Hook，这些 Hook 可以分为同步和异步两大类，不论哪一类都具备 4 个执行特点
+
+**tapable 工作流程：**
+
+- 实例化 hook 注册事件监听
+- 通过 hook 触发事件监听
+- 执行懒编译生成的可执行代码
+
+Hook 本质是 tapable 实例对象，Hook 执行机制可分为同步和异步
+
+**Hook 执行特点：**
+
+- Hook：普通钩子，监听器之间互相独立不干扰
+- BailHook：熔断钩子，某个监听返回非 undefined 时后续不执行
+- WaterfallHook：瀑布钩子，上一个监听的返回值可传递至下一个
+- LoopHook：循环钩子，如果当前未返回 false 则一直执行
+
+tapable 库同步钩子
+
+- SynckHook
+- SyncBailHook
+- SyncWaterfalHook
+- SyncLoopHook
+
+tapable 库异步串行钩子
+
+- AsyncSeriesHook
+- AsyncSeriesBailHook
+- AsyncSeriesWaterfalHook
+
+tapable　库异步并行钩子
+
+- AsyncParalleHook
+- AsyncParalleBailHook
+
+### 同步钩子
+
+Tapable 的功能与 EventEmitter 类似，不过它包含了多种不同的监听和触发事件的方式
+
+- 发布订阅：`$on` 监听事件；`$emit` 执行事件
+
+- hook：`tap` 监听事件，`call` 执行事件
+
+  `hook.call` 如果没有处理数据，它在各个钩子函数中都可以使用，这里就是事件工作流机制，高内聚低耦合
+
+  如果 fn2 不返回 `undefined` 就会出现熔断机制（fn3 不执行）
+
+```js
+const { SyncHook } = require('tapable')
+
+// 定义函数形参，形参在添加事件处理器中可以用的上
+let hook = new SyncHook(['name', 'age'])
+hook.tap('fn1', function (name, age) {
+  console.log('fn1--->', name, age)
+})
+hook.tap('fn2', function (name, age) {
+  console.log('fn2--->', name, age)
+  return undefined
+})
+hook.tap('fn3', function (name, age) {
+  console.log('fn3--->', name, age)
+})
+hook.call('zce', 18)
+```
+
+瀑布类型，如果当前执行的事件回调返回值不为 `undefined`，那么就把下一个事件回调的第一个参数替换成这个值
+
+```js
+const { SyncWaterfallHook } = require('tapable')
+
+let hook = new SyncWaterfallHook(['name', 'age'])
+hook.tap('fn1', function (name, age) {
+  console.log('fn1--->', name, age)
+  return 'ret1'
+})
+hook.tap('fn2', function (name, age) {
+  console.log('fn2--->', name, age)
+  return 'ret2'
+})
+hook.tap('fn3', function (name, age) {
+  console.log('fn3--->', name, age)
+  return 'ret3'
+})
+hook.call('zce', 33)
+```
+
+循环类型，如果当前执行的事件回调的返回值不是 `undefined`，重新从第一个注册事件回调处执行，直到当前执行的事件回调没有返回值
+
+![image-20220613173119650](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20220613173119650.png)
+
+```js
+const { SyncLoopHook } = require('tapable')
+
+let hook = new SyncLoopHook(['name', 'age'])
+let count1 = 0
+let count2 = 0
+hook.tap('fn1', function (name, age) {
+  console.log('fn1--->', name, age)
+  if (++count1 === 1) {
+    count1 = 0
+    return undefined
+  }
+  return true
+})
+hook.tap('fn2', function (name, age) {
+  console.log('fn2--->', name, age)
+  if (++count2 === 2) {
+    count2 = 0
+    return undefined
+  }
+  return true
+})
+hook.tap('fn3', function (name, age) {
+  console.log('fn3--->', name, age)
+})
+hook.call('foo', 100)
+```
+
