完成webpack编译流程

--- a/Engineering/2.5webpack源码.md
+++ b/Engineering/2.5webpack源码.md
@@ -1,4 +1,4 @@
-## 打包文件分析
+## 打包文件模块分析
 
 ### 源码调试
 
@@ -267,6 +267,8 @@ export const age = 100
   }
 })
 ```
+
+## 打包文件懒加载分析
 
 ### 懒加载流程
 
@@ -558,6 +560,9 @@ hook.tap('fn3', function (name, age) {
   console.log('fn3--->', name, age)
 })
 hook.call('zce', 18)
+// fn1---> zce 18
+// fn2---> zce 18
+// fn3---> zce 18
 ```
 
 瀑布类型，如果当前执行的事件回调返回值不为 `undefined`，那么就把下一个事件回调的第一个参数替换成这个值
@@ -579,6 +584,9 @@ hook.tap('fn3', function (name, age) {
   return 'ret3'
 })
 hook.call('zce', 33)
+// fn1---> zce 33
+// fn2---> ret1 33
+// fn3---> ret2 33
 ```
 
 循环类型，如果当前执行的事件回调的返回值不是 `undefined`，重新从第一个注册事件回调处执行，直到当前执行的事件回调没有返回值
@@ -611,5 +619,424 @@ hook.tap('fn3', function (name, age) {
   console.log('fn3--->', name, age)
 })
 hook.call('foo', 100)
+// fn1---> foo 100
+// fn2---> foo 100
+// fn1---> foo 100
+// fn2---> foo 100
+// fn3---> foo 100
+```
+
+### 异步钩子
+
+对于异步钩子的使用，在添加事件监听时会存在三种方式：`tap`、`tapAsync`、`tapPromise`
+
+- `tapAsync` 和 `tapPromise` 不能用于 Sync 开头的钩子类，强行使用会报错
+- `callAsync` 与 `call` 不同的是：在传入了与实例化钩子类的数组长度一致个数的参数时，还需要在最后添加一个回调函数，否则在事件回调中执行回调函数可能会报错
+
+```js
+const { AsyncParallelHook } = require('tapable')
+
+let hook = new AsyncParallelHook(['name'])
+
+console.time('times')
+hook.tapAsync('fn1', function (name, callback) {
+  setTimeout(() => {
+    console.log('fn1--->', name)
+    callback()
+  }, 1000)
+})
+hook.tapAsync('fn2', function (name, callback) {
+  setTimeout(() => {
+    console.log('fn2--->', name)
+    callback()
+  }, 2000)
+})
+hook.callAsync('lg', function () {
+  console.log('最后一个回调执行了')
+  console.timeEnd('times')
+})
+// fn1---> lg
+// fn2---> lg
+// 最后一个回调执行了
+// times: 2.003s
+
+console.time('time')
+hook.tapPromise('fn1', function (name) {
+  return new Promise(function (resolve, reject) {
+    setTimeout(() => {
+      console.log('fn1--->', name)
+      resolve()
+    }, 1000)
+  })
+})
+hook.tapPromise('fn2', function (name) {
+  return new Promise(function (resolve, reject) {
+    setTimeout(() => {
+      console.log('fn2--->', name)
+      resolve()
+    }, 2000)
+  })
+})
+hook.promise('foo').then(() => {
+  console.log('end执行了')
+  console.timeEnd('time')
+})
+// fn1---> foo
+// fn2---> foo
+// end执行了
+// time: 2.005s
+```
+
+`AsyncParallelBailHook` 会并行执行所有事件回调，但是这个钩子类中的事件回调返回值如果不为 `undefined`，那么 `callAsync` 传入的回调函数的第二个参数会是最先拥有返回值逻辑的事件回调的那个返回值
+
+```js
+const { AsyncParallelBailHook } = require('tapable')
+
+let hook = new AsyncParallelBailHook(['name'])
+console.time('time')
+hook.tapAsync('fn1', function (name, callback) {
+  setTimeout(() => {
+    console.log('fn1--->', name)
+    callback()
+  }, 1000)
+})
+hook.tapAsync('fn2', function (name, callback) {
+  setTimeout(() => {
+    console.log('fn2--->', name)
+    callback('err')
+  }, 2000)
+})
+hook.tapAsync('fn3', function (name, callback) {
+  setTimeout(() => {
+    console.log('fn3--->', name)
+    callback()
+  }, 3000)
+})
+hook.callAsync('zce', function () {
+  console.log('最后的回调执行了')
+  console.timeEnd('time')
+})
+// fn1---> zce
+// fn2---> zce
+// 最后的回调执行了
+// time: 2.003s
+// fn3---> zce
+```
+
+异步的串行跟同步有些类似，在使用 `tapPromise`　注册事件回调时，事件对象必须返回一个 `Promise` 对象，否则会报错
+
+```js
+const { AsyncSeriesHook } = require('tapable')
+
+let hook = new AsyncSeriesHook(['name'])
+console.time('time')
+hook.tapPromise('fn1', function (name) {
+  return new Promise((resolve, reject) => {
+    setTimeout(() => {
+      console.log('fn1--->', name)
+      resolve()
+    }, 1000)
+  })
+})
+hook.tapPromise('fn2', function (name) {
+  return new Promise((resolve, reject) => {
+    setTimeout(() => {
+      console.log('fn2--->', name)
+      resolve()
+    }, 2000)
+  })
+})
+hook.promise('foo').then(function () {
+  console.log('~~~~')
+  console.timeEnd('time')
+})
+// fn1---> foo
+// fn2---> foo
+// ~~~~
+// time: 3.014s
+```
+
+### SyncHook 源码调试
+
+- `Hook.js` 它提供了所有的东西
+- `HookCodeFactory.js` 它是做代码拼接的工厂
+- `SyncHook.js` 是单独写死的钩子
+
+```js
+const { SyncHook } = require('tapable')
+
+let hook = new SyncHook(['name', 'age'])
+hook.tap('fn1', function (name, age) {
+  console.log('fn1--->', name, age)
+})
+hook.tap('fn2', function (name, age) {
+  console.log('fn2--->', name, age)
+})
+hook.call('zce', 100)
+```
+
+实例化 `SyncHook` 对象，里面比较重要的是 `_x` 和 `taps`
+
+![image-20220614135443287](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20220614135443287.png)
+
+合并 `sync` 属性到 `options` 中
+
+![image-20220614140143065](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20220614140143065.png)
+
+之后调用 `_insert` 方法
+
+![image-20220614140809173](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20220614140809173.png)
+
+多次调用 `tap` 方法，会把对应 `tap` 添加到 `this.taps` 这个数组里
+
+![image-20220614141127431](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20220614141127431.png)
+
+调用 `call` 方法会先走 `_createCall` 方法
+
+![image-20220614141335574](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20220614141335574.png)
+
+调用 `_createCall` 方法
+
+![image-20220614141540179](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20220614141540179.png)
+
+开始取 `options.type -> sync`，这里面创造了一个函数，中间对其进行拆分（分为 header + content），为什么这么做呢？因为不同的钩子拼接的东西不一样
+
+![image-20220614150228127](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20220614150228127.png)
+
+之后取出数组的每一项执行
+
+![image-20220614151215162](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20220614151215162.png)
+
+### 手写 SyncHook
+
+1. 实例化 hook，需要定义 `_x = [f1,  f2, ...]`（用来保存多个监听器函数）、`taps = [{}, {}]`
+2. 实例调用 `tap` 方法，`taps = [{}, {}]`
+3. 调用 `call` 方法，`HookCodeFactory` 里面有 `setup` 和 `create` 两个方法
+4. 我们需要手写 `Hook`、`SyncHook`、`HookCodeFactory` 这几个类
+
+![image-20220615093209493](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20220615093209493.png)
+
+- `SyncHook.js`
+
+```js
+let Hook = require('./Hook')
+
+class HookCodeFactory {
+  args() {
+    return this.options.args.join(',')
+  }
+  head() {
+    return `var _x = this._x;`
+  }
+  content() {
+    let code = ``
+    for (var i = 0; i < this.options.taps.length; i++) {
+      code += `var _fn${i} = _x[${i}];_fn${i}(${this.args()});`
+    }
+    return code
+  }
+  // 先准备后续需要使用的数据
+  setup(instance, options) {
+    // 这里的操作在源码中是通过 init 方法实现，而我们当前是直接挂载在 this 身上
+    this.options = options
+    // this._x = [f1, f2, ...]
+    instance._x = options.taps.map(o => o.fn)
+  }
+  // 核心就是创建一段可执行的代码体后返回
+  create() {
+    let fn
+    // fn = new Function('name', 'age', 'var _x = this._x, var _fn0 = _x[0];_fn0(name, age);')
+    fn = new Function(this.args(), this.head() + this.content())
+    return fn
+  }
+}
+let factory = new HookCodeFactory()
+
+class SyncHook extends Hook {
+  constructor(args) {
+    super(args)
+  }
+  // options -> {taps: [{}, {}], args: [name, age]}
+  compile(options) {
+    // 由于tapable里提供不同的钩子，这些钩子都需要对代码重新组装处理
+    factory.setup(this, options)
+    return factory.create(options)
+  }
+}
+
+module.exports = SyncHook
+```
+
+- `Hook.js`
+
+```js
+class Hook {
+  constructor(args = []) {
+    this.args = args
+    this.taps = [] // 将来用于存放组装好的信息
+    this._x = undefined // 将来在代码工厂函数中会给 _x = [f1, f2, ...]
+  }
+  tap(options, fn) {
+    if (typeof options === 'string') {
+      options = { name: options }
+    }
+    options = Object.assign({ fn }, options) // { fn: xx, name: fn1 }
+    // 调用以下方法将组装好的 options 添加至 []
+    this._insert(options)
+  }
+  _insert(options) {
+    this.taps[this.taps.length] = options
+  }
+  call(...args) {
+    // 01 创建将来要具体执行的函数代码结构
+    let callFn = this._createCall()
+    // 02 调用上述的函数（args传入进去）
+    return callFn.apply(this, args)
+  }
+  _createCall() {
+    // 提供模板，具体细节交给子类完成
+    return this.compile({
+      taps: this.taps,
+      args: this.args
+    })
+  }
+}
+
+module.exports = Hook
+```
+
+### AsyncParallelHook 源码调试
+
+```js
+const { AsyncParallelHook } = require('tapable')
+
+let hook = new AsyncParallelHook(['name', 'age'])
+hook.tapAsync('fn1', function (name, age, callback) {
+  console.log('fn1-->', name, age)
+  callback()
+})
+hook.tapAsync('fn2', function (name, age, callback) {
+  console.log('fn2-->', name, age)
+  callback()
+})
+hook.callAsync('zoe66', 18, function () {
+  console.log('end----')
+})
+```
+
+与 `SyncHook` 不同的是，它传递的 `type -> async`。`_tap`、`_insert` 与 `SyncHook` 运行步骤没有区别
+
+![image-20220615112840202](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20220615112840202.png)
+
+`SyncHook` 调用的是 `call`，现在调用的是 `callAsync`，里面也同样调用 `compile` 方法
+
+![image-20220615113216439](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20220615113216439.png)
+
+`compile` 方法，里面还是代码工厂，调用 `setup` 和 `create`
+
+![image-20220615140405290](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20220615140405290.png)
+
+`create` 会走到 `async` 的分支，因为传参有 `callback` 有这个函数才能继续往下走 `function (name, age, callback) {callback()}`
+
+![image-20220615140837201](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20220615140837201.png)
+
+生成的函数可以简化一下
+
+```js
+(function anonymous(name, age, _callback) {
+  "use strict";
+  var _x = this._x;
+
+  var _counter = 2;  // 记录有几个事件监听器执行
+  var _done = (function () {
+    _callback();
+  });
+
+  var _fn0 = _x[0];
+  _fn0(name, age, (function () {
+    if (--_counter === 0) _done();
+  }));
+})
+```
+
+### 手写 AsyncParallelHook
+
+在 `Hook.js` 中添加如下方法：
+
+```js
+class Hook {
+  tapAsync(options, fn) {
+    if (typeof options === 'string') {
+      options = { name: options }
+    }
+    options = Object.assign({ fn }, options)
+    this._insert(options)
+  }
+  _createCall() {
+    // 提供模板，具体细节交给子类完成
+    return this.compile({
+      taps: this.taps,
+      args: this.args
+    })
+  }
+}
+```
+
+- `AsyncParallelHook.js`
+
+```js
+let Hook = require('./Hook')
+
+class HookCodeFactory {
+  args({ after, before } = {}) {
+    let allArgs = this.options.args
+    if (before) allArgs = [before].concat(allArgs)
+    if (after) allArgs = allArgs.concat(after)
+    return allArgs.join(',')
+  }
+  head() {
+    return `"use strict";var _x = this._x;`
+  }
+  content() {
+    let code = `var _counter = ${this.options.taps.length};var _done = (function () {
+      _callback();
+    });`
+    for (var i = 0; i < this.options.taps.length; i++) {
+      code += `var _fn${i} = _x[${i}];_fn${i}(name, age, (function () {
+        if (--_counter === 0) _done();
+      }));`
+    }
+    return code
+  }
+  // 先准备后续需要使用的数据
+  setup(instance, options) {
+    // 这里的操作在源码中是通过 init 方法实现，而我们当前是直接挂载在 this 身上
+    this.options = options
+    // this._x = [f1, f2, ...]
+    instance._x = options.taps.map(o => o.fn)
+  }
+  // 核心就是创建一段可执行的代码体后返回
+  create() {
+    let fn
+    // fn = new Function('name', 'age', 'var _x = this._x, var _fn0 = _x[0];_fn0(name, age);')
+    fn = new Function(this.args({ after: '_callback' }), this.head() + this.content())
+    return fn
+  }
+}
+let factory = new HookCodeFactory()
+
+class AsyncParallelHook extends Hook {
+  constructor(args) {
+    super(args)
+  }
+  // options -> {taps: [{}, {}], args: [name, age]}
+  compile(options) {
+    // 由于tapable里提供不同的钩子，这些钩子都需要对代码重新组装处理
+    factory.setup(this, options)
+    return factory.create(options)
+  }
+}
+
+module.exports = AsyncParallelHook
 ```
 
